fix align in menuitem

--- a/src/modules/billing/components/MenuList/MenuItem/MenuItem.module.scss
+++ b/src/modules/billing/components/MenuList/MenuItem/MenuItem.module.scss
@@ -10,5 +10,4 @@
     font-size: 14px;
     color: #62618F;
     height: 21px;
-    margin-bottom: 6px;
 }
